better styling, better latex, titlebar

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,10 +9,13 @@
   </head>
 
   <body>
-    <main class="container">
-      <div id="header">
-        <span id="file-name">bruh.md</span>
+    <div class="titlebar">
+      <div class="titlebar-drag-region" data-tauri-drag-region>
+        <div id="file-name">Glimpse</div>
       </div>
+    </div>
+    
+    <main class="container">
       <div id="content"></div>
     </main>
   </body>
