--- a/index.html
+++ b/index.html
@@ -14,9 +14,41 @@
         <div id="file-name">Glimpse</div>
       </div>
     </div>
-    
+
     <main class="container">
       <div id="content"></div>
     </main>
+
+    <dialog id="settings-modal">
+      <div class="settings-sidebar">
+        <h2>Settings</h2>
+        <div class="settings-sidebar-item" data-target="general">General</div>
+        <div class="settings-sidebar-item" data-target="latex">LaTeX</div>
+      </div>
+      <div class="modal-body">
+        <section class="settings-panel active" id="general">
+          <h2>App</h2>
+          <div class="settings-divider"></div>
+          <h3>Version: 1.0.0</h3>
+          <a href="#">Changelog</a>
+          <div class="settings-divider"></div>
+        </section>
+        <section class="settings-panel" id="latex">
+          <h2>LaTeX</h2>
+          <div class="settings-divider"></div>
+          <div id="preamble">
+            <div id="preamble-text">
+              <h3>LaTeX preamble</h3>
+              <p>Set a custom LaTeX preamble.</p>
+            </div>
+            <div id="preamble-buttons">
+              <button id="import-preamble-btn">Import Preamble</button>
+              <button id="reset-preamble-btn">Reset to Default</button>
+            </div>
+          </div>
+          <div class="settings-divider"></div>
+        </section>
+      </div>
+    </dialog>
   </body>
 </html>
