settings work and allow for preamble import

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
             <div id="preamble-text">
               <h3>LaTeX preamble</h3>
               <p>Set a custom LaTeX preamble.</p>
+              <div id="preamble-status">Checking...</div> 
             </div>
             <div id="preamble-buttons">
-              <button id="import-preamble-btn">Import Preamble</button>
-              <button id="reset-preamble-btn">Reset to Default</button>
+              <button id="import-preamble-btn" class="button-primary">Import</button>
+              <button id="reset-preamble-btn" class="button-secondary">Reset</button>
             </div>
           </div>
           <div class="settings-divider"></div>
